# tsubuyaitter-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 8bd0f7257b55_create_tables.py  b6e9b0b1250d_create_initial_tables.py
app/: crud.py  enums.py  main.py  models.py
app/core/: config.py  database.py  redis.py  security.py
app/routes/: auth.py  health_check.py  helth_check.py  user.py
app/schemas/: auth.py  auth_schema.py  base.py  health_check.py  helth_check.py  token_schema.py  user_schema.py
app/services/: auth_service.py  token_service.py  user_service.py
database/: Dockerfile
database/script/: init.sh
tests/: conftest.py  test_curd.py
tests/core/: conftest.py  test_config.py  test_redis.py  test_security.py
tests/routes/: test_auth.py  test_health_check.py  test_user.py
tests/services/: test_auth_service.py  test_token_service.py  test_user_service.py
