[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic<2.0.0,>=1.16.2",
    "asyncpg<1.0.0,>=0.30.0",
    "fastapi[standard]<1.0.0,>=0.115.13",
    "psycopg2-binary<3.0.0,>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings<3.0.0,>=2.10.0",
    "sqlalchemy<3.0.0,>=2.0.41",
]

[dependency-groups]
test = [
    "pytest<9.0.0,>=8.4.1",
    "pytest-asyncio<2.0.0,>=1.0.0",
]
